# Elreqaba-LPM

./: .gitignore  LICENSE  README.md  package-lock.json  package.json
electron-gui/: index.html  main.js  package-lock.json  package.json
src-tauri/: Cargo.toml  launch-gui.sh  put.csv  tauri.conf.json
src-tauri/src/: TUI.rs  main.rs
test/: cpuDrainer.c
