[package]
name = "procmanager"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "procmanager_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sysinfo = "0.32.0"
nix = "0.23"
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }


chrono = "0.4.40"

cursive = { version = "0.20", features = ["toml"] }
cursive_table_view = "0.14"
users = "0.11"
lazy_static="1.4.0"
num_cpus = "1.15"

